-Add proper user and schema.
-Fix insert controller index

--- a/gs-validating-form-input-complete/src/main/resources/application.properties
+++ b/gs-validating-form-input-complete/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/db_example
-spring.datasource.username=springuser
-spring.datasource.password=ThePassword
+#spring.datasource.url=jdbc:mysql://localhost:3306/db_example
+#spring.datasource.username=springuser
+#spring.datasource.password=ThePassword
+spring.datasource.username=rpuser
+spring.datasource.password=rpuser1
+spring.datasource.url=jdbc:mysql://localhost:3306/rp-mysql
