--- a/gs-validating-form-input-complete/pom.xml
+++ b/gs-validating-form-input-complete/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
         
+        <dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-java8</artifactId>
+		</dependency>
+        
         <!-- Use MySQL Connector-J -->
         
         <dependency>
