--- a/project-receipt/.project
+++ b/project-receipt/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>gs-validating-form-input-complete</name>
+	<name>project-receipt</name>
 	<comment></comment>
 	<projects>
 	</projects>
