--- a/project-receipt/pom.xml
+++ b/project-receipt/pom.xml
@@ -69,6 +69,12 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        
+        <!-- JSON conversion -->
+        <dependency>
+    		<groupId>com.fasterxml.jackson.dataformat</groupId>
+    		<artifactId>jackson-dataformat-xml</artifactId>
+		</dependency>
     </dependencies>
     
     <repositories>
