Address retrieval and creation changed. Table model for store & address changed too, now won't create 1 record in store for each address anymore.

--- a/project-receipt/pom.xml
+++ b/project-receipt/pom.xml
@@ -81,6 +81,13 @@
      		<groupId>net.sourceforge.nekohtml</groupId>
      		<artifactId>nekohtml</artifactId>
  		</dependency>
+ 		
+  		<!-- Hibernate? -->
+<!-- 		<dependency>
+		    <groupId>org.hibernate</groupId>
+		    <artifactId>hibernate-core</artifactId>   
+		    <version>5.2.2.Final</version>
+		</dependency> -->
     </dependencies>
     
     <repositories>
